# Citadel-Archive

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CONTEXT.md  PUBLISHING.md  README.md  SECURITY.md  SKILL.md  brand.md  install.sh  pyproject.toml  railway.toml  requirements.txt  skills-lock.json  tasks.md
.cursor/rules/: citadel-agent-policy.mdc
.github/workflows/: publish.yml  test.yml
.windsurf/rules/: citadel-agent-policy.md
docs/: adr-0007-shipping-plan.md  agent-access-model.md  agent-messenger-integration.md  architecture-deepening-opportunities.md  dispute-quarantine-plan.md  evolve-kuzu-lock-findings.md  google-chat-organization-update-digest-plan.md  internal-update-agent-architecture.md  live-knowledge-graph-timeline.md  mcp-safety-plan.md  obsidian-integration-plan.md  operations.md  organization-vault-plan.md  phase-2-shipping-plan.md  progress.md  public-and-private.md  read-side-hardening-sprint.md  team-share-smoke-test.md  uat-2026-07-23-findings.md  vault-backup-mirror.md
docs/Citadel Archive branding/: Citadel Bot.dc.html  Citadel Branding.dc.html  Citadel Interface.dc.html
docs/adr/: 0001-github-vault-backup-mirror.md  0003-seat-node-central-private-memory.md  0004-linear-seat-scoped-mirror.md  0005-self-evolving-memory-policy-gated-ingestion.md  0006-agent-auth-and-onboarding.md  (+6 more)
docs/mcp/: README.md  (+2 more)
kb/: __init__.py  access.py  access_client.py  agent_messenger.py  agent_workflows.py  backup_mirror.py  banner.py  capture.py  capture_config.py  capture_policy.py  capture_roots_sync.py  cli.py  cognee_client.py  config.py  conflicts.py  github_sync.py  knowledge_mesh.py  learning.py  learning_agent.py  linear_sync.py  llm_enrichment.py  logging_utils.py  mcp_server.py  mesh.py  models.py  notification_gateways.py  obsidian_sync.py  onboard.py  organization_digest.py  promotion.py  promotion_client.py  promotion_queue.py  promotion_refs.py  prompt.py  repo_content_sync.py  repository_update.py  retry.py  search_feedback.py  search_format.py  security_scan.py  (+9 more)
scripts/: agent_canary.py  run_backup_mirror.py  run_github_sync.py  run_railway.py  run_self_improve.py  stage_loop.py
tests/: conftest.py  test_access.py  test_access_client.py  test_agent_canary.py  test_agent_workflows.py  test_backup_mirror.py  test_backup_mirror_job.py  test_banner.py  test_capture.py  test_capture_config.py  test_capture_policy.py  test_capture_roots_sync.py  test_cli_commands.py  test_client_boundary.py  test_cognee_client.py  test_config.py  test_conflicts.py  test_evolve_scheduler.py  test_github_sync.py  test_headless.py  test_knowledge_mesh.py  test_learning.py  test_linear_sync.py  test_llm_enrichment.py  test_mcp_server.py  test_mesh.py  test_obsidian_sync.py  test_onboard.py  test_organization_digest.py  test_promotion.py  test_promotion_client.py  test_promotion_refs.py  test_railway_entrypoint.py  test_receipt.py  test_repo_content_sync.py  test_repository_update.py  test_result_metadata_trust.py  test_retry.py  test_search_feedback.py  test_search_format.py  (+12 more)
(+57 files in other folders)
