[project]
name = "citadel"
version = "0.1.0"
description = "A self-hosted knowledge-base wrapper built on top of Cognee."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cognee[fastembed,postgres-binary]>=1.2.1,<2.0.0",
    "fastapi>=0.116.2,<1.0.0",
    "google-auth>=2.40.0,<3.0.0",
    "mcp>=1.23.0,<2.0.0",
    "pydantic>=2.10.5,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]

[project.scripts]
citadel = "kb.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<9",
    "pytest-asyncio>=0.21.1,<2",
    "ruff>=0.9.2,<1",
    "textual>=0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb"]

[tool.hatch.build.targets.wheel.force-include]
"kb/static" = "kb/static"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
