[project]
name = "citadel-archive"
version = "0.2.0"
description = "Citadel — a self-hosted Organization Vault and seat-capture CLI built on Cognee."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["knowledge-base", "vault", "cli", "cognee", "rag", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# Base install = the lightweight teammate CLI (onboard / status / capture / setup).
# These commands are pure standard library — zero third-party deps. The server
# stack (and python-dotenv for .env loading) lives in the [server] extra.
dependencies = []

[project.optional-dependencies]
# `pip install citadel-archive[server]` — run the Node/MCP server + sync jobs.
server = [
    "cognee[fastembed,postgres-binary]>=1.2.2,<2.0.0",
    "fastapi>=0.116.2,<1.0.0",
    "google-auth>=2.40.0,<3.0.0",
    "mcp>=1.23.0,<2.0.0",
    "pydantic>=2.10.5,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]
# `pip install citadel-archive[tui]` — the live `citadel tui` dashboard.
tui = ["textual>=0.50"]

[project.urls]
Homepage = "https://github.com/masumi-network/Citadel-Archive"
Repository = "https://github.com/masumi-network/Citadel-Archive"
Issues = "https://github.com/masumi-network/Citadel-Archive/issues"

[project.scripts]
citadel = "kb.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<9",
    "pytest-asyncio>=0.21.1,<2",
    "ruff>=0.9.2,<1",
    "textual>=0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
